Name:                idme
Version:             0.1
Synopsis:            Ordered ID server.
Description:         ID server yielding "roughly" ordered ids.
License:             GPL-3
License-file:        LICENSE
Author:              Adam Wagner
Maintainer:          awagner83@gmail.com
Category:            ID Server
Build-type:          Simple
Cabal-version:       >=1.6

Executable idme
  Hs-source-dirs:    src
  Main-is:           Idme.hs
  Build-depends:     base >= 4 && < 5, network, hsyslog
  Ghc-options:       -Wall
  
Source-repository head
  type:              git
  location:          git://github.com/awagner83/IdMe.git
